...
    <string name="required_error">This field is required</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">SignIn</string>
    <string name="welcome">Welcome !</string>
    <string name="login_failed">Invalid credentials</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="dashboard_fragment_label">Dashboard</string>
    <string name="ticket_fragment_label">New Ticket</string>
...
